logs/Slang/generated/hdlconv/hdlconvertor_p801.sv.log
name: hdlconvertor_p801
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p801.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p801.sv:6:1: error: expected member
bufif0 ar[3:0] (out, in, en); // array of three-state buffers
^~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p801.sv:13:1: error: expected member
bufif0 ar3 (out[3],in[3],en); 
^~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p801.sv:14:1: error: expected member
bufif0 ar2 (out[2],in[2],en);
^~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p801.sv:15:1: error: expected member
bufif0 ar1 (out[1],in[1],en);
^~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p801.sv:16:1: error: expected member
bufif0 ar0 (out[0],in[0],en);
^~~~~~
